--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "eslint-plugin-flowtype": "^3.13.0",
+    "html-react-parser": "^0.10.3",
+    "jquery": "^3.5.0",
     "mdbreact": "^4.25.4",
+    "mermaid": "^8.5.0",
+    "moment": "^2.24.0",
+    "prismic-reactjs": "^1.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-contentful": "^2.0.7",
     "react-dom": "^16.13.1",
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "^3.8.3"
   },
