--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "prismic-reactjs": "^1.3.1",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-contentful": "^2.0.7",
     "react-dom": "^16.13.1",
